Leaves only Windows64 build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Check whether unity activation requests should be done
         id: checklicense_job
         run: |
-            echo "Skip activation job: ${{ env.UNITY_LICENSE != '' }}"
-            echo "::set-output name=is_unity_license_set::${{ env.UNITY_LICENSE != '' }}"
+          echo "Skip activation job: ${{ env.UNITY_LICENSE != '' }}"
+          echo "::set-output name=is_unity_license_set::${{ env.UNITY_LICENSE != '' }}"
   activation:
     needs: [checklicense]
     if: needs.checklicense.outputs.is_unity_license_set == 'false'
@@ -60,7 +60,7 @@ jobs:
         with:
           projectPath: ${{ env.PROJECT_PATH }}
           testMode: all
-          customParameters: "-nographics"
+          customParameters: '-nographics'
       - uses: actions/upload-artifact@v2
         with:
           name: Test results (all modes)
@@ -75,12 +75,12 @@ jobs:
       fail-fast: false
       matrix:
         targetPlatform:
-          - StandaloneOSX
-          - StandaloneWindows
+          #- StandaloneOSX
+          #- StandaloneWindows
           - StandaloneWindows64
-          - StandaloneLinux64
-          - iOS
-          - Android
+          #- StandaloneLinux64
+          #- iOS
+          #- Android
           # See https://github.com/game-ci/docker/issues/53 webgl will be supported in editor image v0.9
           # - WebGL
     steps:
